--- a/config/packages/event_sourcing.yaml
+++ b/config/packages/event_sourcing.yaml
@@ -1,3 +1,3 @@
 event_sourcing:
   private_data:
-    payload_service: EsTodosApi\Infrastructure\CrazyPrivateDataPayloadService
+    payload_encoder: EsTodosApi\Infrastructure\CrazyPayloadEncoderAdapter
