--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,8 @@
     "phpstan/phpstan": "^1.10",
     "phpunit/phpcov": "^9.0",
     "phpunit/phpunit": "^10.2",
-    "rector/rector": "^0.17.0"
+    "rector/rector": "^0.17.0",
+    "symplify/easy-coding-standard": "^12.0"
   },
   "extra": {
     "symfony": {
